--- a/pagina.html
+++ b/pagina.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link rel="stylesheet" href="estilo.css">
     <meta charset="utf-8">
     <title>Mi pagina web</title>
   </head>
